# cht2520-assignment-1-django

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  Vagrantfile  manage.py  package-lock.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  webpack.config.js
timetracker/: urls.py  wsgi.py
timetracker/accounts/: forms.py  urls.py  views.py
timetracker/activities/: admin.py  forms.py  models.py  urls.py  views.py
timetracker/activities/migrations/: 0001_initial.py  0002_auto_20181022_1132.py  0002_translations.py
timetracker/activities/templates/activities/: activity_create.html  activity_detail.html  activity_list.html  activity_update.html  new.html
timetracker/home/: views.py
timetracker/projects/: admin.py  models.py
timetracker/projects/migrations/: 0001_initial.py
timetracker/settings/: base.py  dev.py
timetracker/sheets/: admin.py  models.py
timetracker/sheets/migrations/: 0001_initial.py
timetracker/static/js/: index.js
timetracker/static/js/components/: datePicker.js  deleteButton.js  navBar.js
timetracker/static/js/components/datepicker/: index.js
timetracker/static/scss/: main.scss
timetracker/templates/: base.html  header.html  home.html  messages.html
timetracker/templates/auth/: user_form.html
timetracker/templates/registration/: logged_out.html  login.html
timetracker/utils/: widgets.py
vagrant/: provision.sh
