[metadata]
name = timetracker
version = 0.0.1a0
description = A simplistic time tracker.
long-description = file: README.rst
author = Tomasz Knapik
author_email = u1562595@unimail.hud.ac.uk
url = https://github.com/advanced-web/assignment-1-spring-tm-kn/
license = BSD 2-Clause License

[options]
packages = find:
python_requires = >=3.6

[bdist_wheel]
python-tag = py3[flake8]

[flake8]
ignore = C901, W503
exclude = */migrations/*,*/node_modules/*

[isort]
known_first_party=timetracker
known_django=django
known_third_party=dj_database_url
skip=migrations,node_modules
sections=STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[yapf]
based_on_style = pep8
